RESPONSIVE - LISTITEM - fix overflow title and details according  to icons count

--- a/css/listitem.css
+++ b/css/listitem.css
@@ -123,13 +123,12 @@
 .tele-listitem-title {
 	float: left;
 	margin-left: 15px;
-	min-width: 55%;
-	max-width: 55%;
 	font-size: 18px;
 	margin-bottom: 10px;
 	margin-top: -4px;
 	overflow: hidden;
 	text-overflow:ellipsis;
+	white-space: nowrap;
 	height: 20px;
 	font-family: 'Roboto Condensed Regular';
 }
@@ -195,6 +194,8 @@ ul.tele-listitem-info li {
 	padding-right: 10px;
 	height: 15px;
 	border-right: 1px solid #999;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 ul.tele-listitem-info li:last-child {
 	border-right: none;
